--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -42,6 +42,21 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+        echo "vcpkg-root=${{ github.workspace }}/vcpkg" >> "$GITHUB_OUTPUT"
+
+    - name: Install vcpkg
+      run: |
+        git clone https://github.com/microsoft/vcpkg.git ${{ steps.strings.outputs.vcpkg-root }}
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+          ${{ steps.strings.outputs.vcpkg-root }}\\bootstrap-vcpkg.bat
+        else
+          ${{ steps.strings.outputs.vcpkg-root }}/bootstrap-vcpkg.sh
+        fi
+      shell: bash
+
+    - name: Install dependencies with vcpkg
+      run: |
+        ${{ steps.strings.outputs.vcpkg-root }}/vcpkg integrate install
 
     - name: Configure CMake
       run: >
