--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,7 +54,7 @@ jobs:
         fi
       shell: bash
 
-    - name: Install dependencies with vcpkg
+    - name: Integrate vcpkg
       run: |
         ${{ steps.strings.outputs.vcpkg-root }}/vcpkg integrate install
 
@@ -64,8 +64,8 @@ jobs:
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        -DCMAKE_TOOLCHAIN_FILE=${{ steps.strings.outputs.vcpkg-root }}/scripts/buildsystems/vcpkg.cmake
         -S ${{ github.workspace }}
-         --preset default
 
     - name: Build
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
