--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -49,14 +49,14 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa pkg-config
 
     - name: Install vcpkg
-      run: |
-        git clone https://github.com/microsoft/vcpkg.git ${{ steps.strings.outputs.vcpkg-root }}
-        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-          ${{ steps.strings.outputs.vcpkg-root }}\\bootstrap-vcpkg.bat
-        else
-          ${{ steps.strings.outputs.vcpkg-root }}/bootstrap-vcpkg.sh
-        fi
       shell: bash
+      run: |
+        git clone https://github.com/microsoft/vcpkg.git "${{ steps.strings.outputs.vcpkg-root }}"
+        if [ "${{ runner.os }}" == "Windows" ]; then
+          "${GITHUB_WORKSPACE}/vcpkg/bootstrap-vcpkg.bat"
+        else
+          "${GITHUB_WORKSPACE}/vcpkg/bootstrap-vcpkg.sh"
+        fi
 
     - name: Integrate vcpkg
       run: |
@@ -76,5 +76,4 @@ jobs:
 
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
