--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -77,3 +77,11 @@ jobs:
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       run: ctest --build-config ${{ matrix.build_type }}
+
+    - name: Upload Artifacts
+    - uses: actions/upload-artifact@v4
+      with:
+        name: build
+        path: out/
+        retention-days: 3
+        compression-level: 9
